reduce dep to ide.api